// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`partie complete > produit l instantane de reference apres une minute de jeu 1`] = `
{
  "alea": 3407038853,
  "bots": {
    "noirs": 2,
    "ordinaires": 30,
    "total": 32,
  },
  "capturesParBotNoirSubies": {
    "alice": 0,
    "bob": 1,
    "chloe": 0,
  },
  "classement": [
    {
      "botsNoirsDetruits": 0,
      "botsPortes": 7,
      "captures": 0,
      "id": "alice",
      "points": 7,
    },
    {
      "botsNoirsDetruits": 0,
      "botsPortes": 2,
      "captures": 0,
      "id": "bob",
      "points": 2,
    },
    {
      "botsNoirsDetruits": 0,
      "botsPortes": 0,
      "captures": 1,
      "id": "chloe",
      "points": 0,
    },
  ],
  "compteurIdentifiants": 46,
  "evenements": {
    "captureJoueur": 1,
    "captureParBotNoir": 1,
    "ralliement": 14,
  },
  "objetsPoses": 2,
  "partieTerminee": true,
  "positions": {
    "alice": {
      "x": 400,
      "y": 400,
    },
    "bob": {
      "x": 1230.6,
      "y": 151.88,
    },
    "chloe": {
      "x": 701.38,
      "y": 942.17,
    },
  },
  "tempsEcouleMs": 60000,
  "tick": 1200,
  "zonesActives": [
    "invisibilite",
    "invisibilite",
  ],
}
`;

exports[`partie complete > produit l instantane de reference d une partie avec l Evade (etape 7.9) 1`] = `
{
  "alea": 3610684247,
  "bots": {
    "noirs": 2,
    "ordinaires": 30,
    "total": 32,
  },
  "capturesParBotNoirSubies": {
    "alice": 2,
    "bob": 1,
    "chloe": 0,
  },
  "classement": [
    {
      "botsNoirsDetruits": 0,
      "botsPortes": 6,
      "captures": 1,
      "id": "chloe",
      "points": 6,
    },
    {
      "botsNoirsDetruits": 0,
      "botsPortes": 4,
      "captures": 0,
      "id": "bob",
      "points": 4,
    },
    {
      "botsNoirsDetruits": 0,
      "botsPortes": 0,
      "captures": 0,
      "id": "alice",
      "points": 0,
    },
  ],
  "compteurIdentifiants": 55,
  "doubleurs": [],
  "evade": {
    "apparitionMs": 33476,
    "passe": false,
    "porteur": undefined,
    "present": true,
  },
  "evenements": {
    "captureJoueur": 1,
    "captureParBotNoir": 3,
    "evadeApparu": 1,
    "ralliement": 11,
  },
  "objetsPoses": 1,
  "partieTerminee": true,
  "positions": {
    "alice": {
      "x": 263.51,
      "y": 90.26,
    },
    "bob": {
      "x": 1552.84,
      "y": 132.27,
    },
    "chloe": {
      "x": 701.38,
      "y": 942.17,
    },
  },
  "tempsEcouleMs": 60000,
  "tick": 1200,
  "zonesActives": [
    "attraction",
    "chaos",
  ],
}
`;
